# arclight-copilot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: ui_streamlit.py
arclight/: config.py
arclight/agents/: planner.py  researcher.py  reviewer.py
arclight/chains/: rag_chain.py
arclight/ingest/: index_content.py
arclight/memory/: conversation_store.py
arclight/models/: llm.py
arclight/tools/: github_issues.py  py_sandbox.py  web_search.py
tests/: conftest.py  test_tools.py
tests/eval_tasks/: tasks.yaml
