[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arclight-copilot"
version = "0.1.0"
description = "Agentic research copilot (LangChain + Azure + Streamlit)"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["arclight*"]
